<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_name_section"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/sub_header_text_color" />

        <EditText
            android:id="@+id/contact_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" >

            <requestFocus />
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_type_section"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/sub_header_text_color" />

        <RadioGroup
            android:id="@+id/contact_type_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/contact_type_doctor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/contact_type_doctor" />

            <RadioButton
                android:id="@+id/contact_type_paediatrician"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_type_paediatrician" />

            <RadioButton
                android:id="@+id/contact_type_midwife"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_type_midwife" />

            <RadioButton
                android:id="@+id/contact_type_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_type_other" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_phone_section"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/sub_header_text_color" />

        <EditText
            android:id="@+id/contact_phone_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_address_section"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/sub_header_text_color" />

        <EditText
            android:id="@+id/contact_address_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPostalAddress" />
    </LinearLayout>

</ScrollView>